// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commands/docker/builder build-only yarn: build 1`] = `
[
  [
    {
      "buildArgs": [
        "YARN_VERSION=1.22.4",
      ],
      "cache": "docker-build-cache",
      "cacheTags": [
        "latest",
        "1",
        "1.22",
      ],
      "dryRun": undefined,
      "image": "yarn",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": false,
      "tag": "1.22.4",
      "tags": [
        "1",
        "1.22",
        "latest",
      ],
    },
  ],
]
`;

exports[`commands/docker/builder last-only dummy: build 1`] = `
[
  [
    {
      "buildArgs": [
        "IMAGE=slim",
        "DUMMY_VERSION=12",
      ],
      "cache": undefined,
      "cacheTags": [
        "slim",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "12-slim",
      "tags": [
        "slim",
      ],
    },
  ],
]
`;

exports[`commands/docker/builder updates image yarn (dry-run): build 1`] = `
[
  [
    {
      "buildArgs": [
        "YARN_VERSION=1.22.4",
      ],
      "cache": "docker-build-cache",
      "cacheTags": [
        "latest",
        "1",
        "1.22",
      ],
      "dryRun": true,
      "image": "yarn",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "1.22.4",
      "tags": [
        "1",
        "1.22",
        "latest",
      ],
    },
  ],
]
`;

exports[`commands/docker/builder works dummy: build 1`] = `
[
  [
    {
      "buildArgs": [
        "DUMMY_VERSION=10",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "platforms": undefined,
      "push": true,
      "tag": "10",
      "tags": [],
    },
  ],
  [
    {
      "buildArgs": [
        "DUMMY_VERSION=13",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "platforms": undefined,
      "push": true,
      "tag": "13",
      "tags": [],
    },
  ],
]
`;

exports[`commands/docker/builder works gradle: build 1`] = `
[
  [
    {
      "buildArgs": [
        "GRADLE_VERSION=3.5.5",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
        "3",
        "3.5",
      ],
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "3.5.5",
      "tags": [
        "3",
        "3.5",
      ],
    },
  ],
  [
    {
      "buildArgs": [
        "GRADLE_VERSION=4.5",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
        "4",
      ],
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "4.5",
      "tags": [
        "4",
      ],
    },
  ],
  [
    {
      "buildArgs": [
        "GRADLE_VERSION=6.0",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
        "6",
      ],
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "6.0",
      "tags": [
        "6",
        "latest",
      ],
    },
  ],
]
`;

exports[`commands/docker/builder works helm: build 1`] = `
[
  [
    {
      "buildArgs": [
        "HELM_VERSION=3.4.0",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
        "3.4",
      ],
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "3.4.0",
      "tags": [
        "3.4",
        "latest",
      ],
    },
  ],
  [
    {
      "buildArgs": [
        "HELM_VERSION=3.7.0",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
      ],
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "3.7.0",
      "tags": [],
    },
  ],
  [
    {
      "buildArgs": [
        "HELM_VERSION=3.7.1",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
        "3",
        "3.7",
      ],
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "3.7.1",
      "tags": [
        "3",
        "3.7",
      ],
    },
  ],
]
`;

exports[`commands/docker/builder works java: build 1`] = `
[
  [
    {
      "buildArgs": [
        "JAVA_VERSION=8.0.302+8",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
        "8",
        "8.0",
      ],
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "8.0.302",
      "tags": [
        "8",
        "8.0",
      ],
    },
  ],
  [
    {
      "buildArgs": [
        "JAVA_VERSION=11.0.12+7",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
        "11",
        "11.0",
      ],
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "11.0.12",
      "tags": [
        "11",
        "11.0",
      ],
    },
  ],
  [
    {
      "buildArgs": [
        "JAVA_VERSION=16.0.2+9",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
        "16",
        "16.0",
      ],
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "16.0.2",
      "tags": [
        "16",
        "16.0",
        "latest",
      ],
    },
  ],
]
`;

exports[`commands/docker/builder works pnpm: build 1`] = `
[
  [
    {
      "buildArgs": [
        "IMAGE=slim",
        "PNPM_VERSION=5.0.0",
      ],
      "cache": undefined,
      "cacheTags": [
        "slim",
        "5-slim",
        "5.0-slim",
      ],
      "dryRun": undefined,
      "image": "pnpm",
      "imagePrefix": "ghcr.io/renovatebot",
      "platforms": [],
      "push": true,
      "tag": "5.0.0-slim",
      "tags": [
        "5-slim",
        "5.0-slim",
        "slim",
      ],
    },
  ],
]
`;

exports[`commands/docker/builder works swift: build 1`] = `
[
  [
    {
      "buildArgs": [
        "SWIFT_VERSION=5.3",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
      ],
      "dryRun": undefined,
      "image": "swift",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "5.3",
      "tags": [],
    },
  ],
  [
    {
      "buildArgs": [
        "SWIFT_VERSION=5.3.1",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
        "5.3",
      ],
      "dryRun": undefined,
      "image": "swift",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "5.3.1",
      "tags": [
        "5.3",
      ],
    },
  ],
  [
    {
      "buildArgs": [
        "SWIFT_VERSION=5.4",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
      ],
      "dryRun": undefined,
      "image": "swift",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "5.4",
      "tags": [],
    },
  ],
  [
    {
      "buildArgs": [
        "SWIFT_VERSION=5.4.2",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
        "5",
        "5.4",
      ],
      "dryRun": undefined,
      "image": "swift",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "5.4.2",
      "tags": [
        "5",
        "5.4",
      ],
    },
  ],
]
`;

exports[`commands/docker/builder works ubuntu: build 1`] = `
[
  [
    {
      "buildArgs": [
        "UBUNTU_VERSION=bionic",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
        "18",
        "18.4",
      ],
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "platforms": undefined,
      "push": true,
      "tag": "bionic",
      "tags": [
        "18",
        "18.4",
      ],
    },
  ],
  [
    {
      "buildArgs": [
        "UBUNTU_VERSION=focal",
      ],
      "cache": undefined,
      "cacheTags": [
        "latest",
        "20",
        "20.4",
      ],
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "platforms": undefined,
      "push": true,
      "tag": "focal",
      "tags": [
        "20",
        "20.4",
        "latest",
      ],
    },
  ],
]
`;

exports[`commands/docker/builder works yarn: build 1`] = `
[
  [
    {
      "buildArgs": [
        "YARN_VERSION=1.22.4",
      ],
      "cache": "docker-build-cache",
      "cacheTags": [
        "latest",
        "1",
        "1.22",
      ],
      "dryRun": undefined,
      "image": "yarn",
      "imagePrefix": "renovate",
      "platforms": [],
      "push": true,
      "tag": "1.22.4",
      "tags": [
        "1",
        "1.22",
        "latest",
      ],
    },
  ],
]
`;
